@@ -1,65 +1,95 @@
 package com.example.demo.controller;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.NoSuchFileException;
-import java.nio.file.Path;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Stream;
 import org.springframework.stereotype.Component;
+import org.springframework.web.socket.CloseStatus;
 import org.springframework.web.socket.TextMessage;
 import org.springframework.web.socket.WebSocketSession;
 import org.springframework.web.socket.handler.TextWebSocketHandler;
+
+import java.io.IOException;
+import java.nio.file.*;
+import java.util.List;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
 
 @Component
 public class MyWebSocketHandler extends TextWebSocketHandler {
 
     private static final String FILE_NAME = "/home/gunsvb/Desktop/sonar.txt";
-    private String previousData = "";
     private boolean isFirstMessage = true;
-    private final ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
+    private List<String> fileLines;
+    private long lastModifiedTime;
 
-    private void checkForFileChanges(WebSocketSession session) {
-        scheduler.scheduleWithFixedDelay(() -> {
-            try {
-                String newData = readNewDataFromFile();
-                if (newData != null) {
-                    session.sendMessage(new TextMessage(newData));
-                }
-            } catch (IOException e) {
-                System.err.println("Error reading file: " + e.getMessage());
-            }
-        }, 0, 1, TimeUnit.SECONDS);
+    private void sendFileContent(WebSocketSession session) {
+        try {
+            String fileContent = String.join("\n", Files.readAllLines(Paths.get(FILE_NAME)));
+            session.sendMessage(new TextMessage(fileContent));
+        } catch (IOException e) {
+            System.err.println("Error sending file content: " + e.getMessage());
+        }
     }
 
-    private String readNewDataFromFile() throws IOException {
-        StringBuilder newContent = new StringBuilder();
-        AtomicBoolean isFileUpdated = new AtomicBoolean(false);
+    @Override
+    public void afterConnectionClosed(WebSocketSession session, CloseStatus status) throws Exception {
+        super.afterConnectionClosed(session, status);
+        isFirstMessage = true;
+        // Perform cleanup or additional logic when a connection is closed
+        System.out.println("Connection closed: " + session.getId());
+    }
 
-        try (Stream<String> fileStream = Files.lines(Path.of(FILE_NAME))) {
-            fileStream.forEach(line -> {
-                if (!line.equals(previousData)) {
-                    newContent.append(line).append(System.lineSeparator());
-                    previousData = line;
-                    isFileUpdated.set(true);
+    private void checkForFileChanges(WebSocketSession session) {
+        try {
+            if (isFirstMessage) {
+                fileLines = Files.readAllLines(Paths.get(FILE_NAME));
+                sendFileContent(session);
+                lastModifiedTime = Files.getLastModifiedTime(Paths.get(FILE_NAME)).toMillis();
+                isFirstMessage = false;
+            }
+
+            ScheduledExecutorService executorService = Executors.newSingleThreadScheduledExecutor();
+            executorService.scheduleAtFixedRate(() -> {
+                try {
+                    long currentModifiedTime = Files.getLastModifiedTime(Paths.get(FILE_NAME)).toMillis();
+                    if (currentModifiedTime > lastModifiedTime) {
+                        List<String> newLines = getNewLines();
+                        if (!newLines.isEmpty()) {
+                            String newData = String.join("\n", newLines);
+                            session.sendMessage(new TextMessage(newData));
+                        }
+                        lastModifiedTime = currentModifiedTime;
+                    }
+                } catch (IOException e) {
+                    System.err.println("Error reading file: " + e.getMessage());
                 }
-            });
-        } catch (NoSuchFileException e) {
-            System.err.println("File not found: " + FILE_NAME);
-        }
+            }, 0, 1, TimeUnit.SECONDS);
 
-        return isFileUpdated.get() ? newContent.toString() : null;
+        } catch (IOException e) {
+            System.err.println("Error initializing file: " + e.getMessage());
+        }
+    }
+
+    private List<String> getNewLines() {
+        try {
+            List<String> currentLines = Files.readAllLines(Paths.get(FILE_NAME));
+
+            int startIndex = 0;
+            if (fileLines.size() < currentLines.size()) {
+                startIndex = fileLines.size();
+            }
+
+            List<String> newLines = currentLines.subList(startIndex, currentLines.size());
+            fileLines = currentLines;
+            return newLines;
+        } catch (IOException e) {
+            System.err.println("Error reading file lines: " + e.getMessage());
+            return List.of();
+        }
     }
 
     @Override
     protected void handleTextMessage(WebSocketSession session, TextMessage message) throws IOException {
         System.out.println("Received message: " + message.getPayload());
-        if (isFirstMessage) {
-            isFirstMessage = false;
-            checkForFileChanges(session);
-        }
+        checkForFileChanges(session);
     }
 }
